--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- font awesome -->
   <link rel="stylesheet" href="css/all.css">
-  <title>Cart Project</title>
+  <title>store</title>
   <style>
   </style>
 </head>
